--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "n/a",
   "scripts": {
     "build": "eleventy",
+    "deploy": "gh-pages -d _site",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -17,9 +18,10 @@
   "bugs": {
     "url": "https://github.com/nbrendler/nbrendler.github.io/issues"
   },
-  "homepage": "https://github.com/nbrendler/nbrendler.github.io#readme",
+  "homepage": "https://www.nikbrendler.com",
   "devDependencies": {
     "@11ty/eleventy": "^0.11.0",
-    "@11ty/eleventy-plugin-syntaxhighlight": "^3.0.1"
+    "@11ty/eleventy-plugin-syntaxhighlight": "^3.0.1",
+    "gh-pages": "^3.1.0"
   }
 }
